--- a/MyPortfolio/portfolio/index.html
+++ b/MyPortfolio/portfolio/index.html
@@ -88,22 +88,12 @@
                         experience in building and deploying machine learning models.
                     </p>
                 </div>
-                <div class="internship-item">
-                    <h3>Web Development Intern</h3>
-                    <h5>TechWing</h5>
-                    <p>June 2024 - December 2024</p>
-                    <p>Worked on developing responsive web applications using HTML, CSS, and JavaScript.</p>
-                </div>
-                <div class="internship-item">
-                    <h3>Aws & Devops</h3>
-                    <h5>APSSDC</h5>
-                    <p>May 2025 - July 2025</p>
-                    <p>
-                        Completed a comprehensive training program on AWS and DevOps practices, gaining hands-on
-                        experience in cloud computing and continuous integration/continuous deployment (CI/CD)
-                        pipelines.
-                    </p>
-                </div>
+              <div class="internship-item">
+                    <h3>python</h3>
+                    <h5>Pragmaticcs</h5>
+                    <p>aug 2022 - December 2022</p>
+                    <p>Advanced Python programming expertise with real-world assignments.Mastered concepts such as OOPs, file handling.</p>
+              </div>
             </div>
         </div>
         <div id="hackathon-container" class="hackathon">
